refactor: update display functions to use display_markdown for better formatting

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -14,14 +14,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T01:41:24.759351Z",
-     "start_time": "2025-07-07T01:41:04.419891Z"
+     "end_time": "2025-07-07T01:47:23.862846Z",
+     "start_time": "2025-07-07T01:47:06.173259Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from data import eda                         # Importa o módulo personalizado 'eda' do pacote 'data' que contém a classe Eda\n",
-    "# from IPython.display import display_markdown # Importa função para exibir markdown formatado em notebooks Jupyter\n",
+    "from IPython.display import display_markdown # Importa função para exibir markdown formatado em notebooks Jupyter\n",
     "\n",
     "path = 'dataset/pokemon.csv' # Define o caminho para o arquivo CSV do dataset de Pokémon\n",
     "df = eda.Eda(path)           # Cria uma instância da classe Eda passando o caminho do arquivo como parâmetro\n",
@@ -32,8 +32,7 @@
     "    exit()\n",
     "else:\n",
     "    title = 'ANÁLISE EXPLORATÓRIA DE DADOS - POKEMON WITH STATS' # Define o título principal da análise\n",
-    "    # display_markdown(f\"# **{title}**\", raw=True)                 # Exibe o título formatado como cabeçalho markdown no notebook\n",
-    "    print(f\"{title}\")\n",
+    "    display_markdown(f\"# **{title}**\", raw=True)                 # Exibe o título formatado como cabeçalho markdown no notebook\n",
     "\n",
     "    # df.report(df.df_L0, title.title()+' (Level 0)')            # Gera relatório completo dos dados originais (Level 0)\n",
     "    df.statistics(df.df_L0, '1', '(Level 0)')                    # Gera estatísticas descritivas dos dados originais (Level 0)\n",
@@ -75,10 +74,16 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "text/markdown": "# **ANÁLISE EXPLORATÓRIA DE DADOS - POKEMON WITH STATS**"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANÁLISE EXPLORATÓRIA DE DADOS - POKEMON WITH STATS\n",
       "\n"
      ]
     },
@@ -127,12 +132,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Primeiras Linhas]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Primeiras Linhas]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -275,12 +279,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Últimas Linhas]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Últimas Linhas]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -423,12 +426,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Features Numéricas]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Features Numéricas]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -589,12 +591,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Features Categóricas]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Features Categóricas]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -668,12 +669,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Resumo Estatístico]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Resumo Estatístico]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -827,15 +827,32 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "text/markdown": "### 2. ANÁLISE DA VARIÁVEL TARGET - [Type 2]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2. ANÁLISE DA VARIÁVEL TARGET - [Type 2]\n",
-      "\n",
       "Tipo da variável: object\n",
       "Número de categorias únicas: 18\n",
-      "Valores nulos: 386\n",
-      "ESTATÍSTICAS CATEGÓRICAS\n",
+      "Valores nulos: 386\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": "#### ESTATÍSTICAS CATEGÓRICAS"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Valores únicos: ['Poison', nan, 'Flying', 'Dragon', 'Ground', 'Fairy', 'Grass', 'Fighting', 'Psychic', 'Steel', 'Ice', 'Rock', 'Dark', 'Water', 'Electric', 'Fire', 'Ghost', 'Bug', 'Normal']\n",
       "Moda: Flying\n",
       "\n",
@@ -905,12 +922,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Primeiras Linhas]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Primeiras Linhas]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -1057,12 +1073,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Últimas Linhas]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Últimas Linhas]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -1209,12 +1224,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Features Numéricas]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Features Numéricas]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -1366,12 +1380,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Features Categóricas]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Features Categóricas]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -1440,12 +1453,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Resumo Estatístico]\n"
-     ]
+     "data": {
+      "text/markdown": "#### [Resumo Estatístico]"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -1587,11 +1599,16 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "text/markdown": "### 4. RESUMO DO DATASET"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4. RESUMO DO DATASET\n",
-      "\n",
       "Formato: (797, 11)\n",
       "Variável Target: Type 2\n",
       "Variáveis para Comparação: Index(['Type 1', 'Type 2', 'Total', 'HP', 'Attack', 'Defense', 'Sp. Atk',\n",
@@ -1613,11 +1630,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5. ANÁLISE DE VARIÁVEIS PARA COMPARAÇÃO\n"
-     ]
+     "data": {
+      "text/markdown": "### 5. ANÁLISE DE VARIÁVEIS PARA COMPARAÇÃO"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -1720,11 +1737,11 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6. MATRIZ DE CORRELAÇÃO\n"
-     ]
+     "data": {
+      "text/markdown": "### 6. MATRIZ DE CORRELAÇÃO"
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
